# Treespace_REU_2017

./: .gitattributes  .gitignore  .travis.yml  CITATION.cff  LICENSE  README.md  answers.csv  binary_ntk_generator.c  create_trees.py  drawing.py  evil.txt  francis.py  hello.txt  install.sh  jetten.py  max_cst.py  misc.py  pyproject.toml  requirements.txt  run_treespace.py  setup.py  treespace.py  utils.py  zhang.py
.github/: labeler.yml
Graph/: Francis-list-2.txt  Francis-list-2.txt~  Francis_2.txt  Katherine-list.txt  README.md  edge_case.txt  justin_list.txt  non-binary-list.txt  non-binary.txt  tree_based.txt
Phylo/: .gitignore  A new efficient algorithm for inferring explicit hybridization networks following the Neighbor-Joining principle.txt  Ancient human genomes suggest three ancestral populations for present-day Europeans.txt  Ancient hybridizations among the ancestral genomes of bread wheat.txt  Biochemical systematics; Figure 14.1.txt  Cyto-Taxonomy and Phylogeny of the Oleaceae.txt  D category IV a group of clinically relevant and phylogenetically diverse partial D.txt  Denisova admixture and the first modern human dispersals into Southeast Asia and Oceania.txt  Denisovan ancestry in East Eurasian and Native American populations.txt  Exactly Computing the Parsimony Scores on Phylogenetic Networks Using Dynamic Programming.txt  Exploring phylogenetic hypotheses via Gibbs sampling on evolutionary networks.txt  Extensive introgression in a malaria vector species complex revealed by phylogenomics.txt  Plant Speciation; Columbia University Press; Figure 4.txt  (+19 more)
(+30 files in other folders)
